--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ninibot-2.0",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A multi-purpose discord bot",
   "main": "ninibot.js",
   "scripts": {
-    "jshint": "jshint ninibot.js src/",    
-    "test": "jshint && mocha -w"
+    "dev": "babel-node ninibot.js",
+    "jshint": "jshint ninibot.js src/",
+    "test": "jshint && mocha -w --compilers js:babel-register"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,9 @@
   },
   "homepage": "https://github.com/niwamaxou/ninibot-2.0#readme",
   "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
     "jshint": "^2.9.3",
     "mocha": "^3.0.2",
     "should": "^11.1.0",
