imgur search tests

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "validthis": true
   },
   "dependencies": {
-    "discord.js": "^9.1.1"
+    "discord.js": "^9.1.1",
+    "request": "^2.74.0"
   }
 }
