--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "validthis": true
   },
   "dependencies": {
+    "dice-rpg": "^1.0.0",
     "discord.js": "^9.1.1",
     "request": "^2.74.0"
   }
