--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nodemon": "^1.10.2",
     "should": "^11.1.0",
     "sinon": "^1.17.5",
-    "sinon-as-promised": "^4.0.2"
+    "sinon-as-promised": "^4.0.2",
+    "when": "^3.7.7"
   },
   "jshintConfig": {
     "node": true,
