--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "discord.js": "^9.1.1",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "ytdl-core": "^0.7.19"
   }
 }
